# pocketflowcreator

./: .coverage  .gitignore  ARCHIVE_MANIFEST.md  BOY_SCOUT_NOTES.md  CHANGELOG.md  CONTRIBUTING.md  EBOOK_README.md  LICENSE  Learn_PocketFlow_Creator.html  Learn_PocketFlow_Creator.md  MEMORY.md  Makefile  NODE_TYPE_CATALOG.md  README.md  STATUS.md  TASKS.md  pocketflow_creator_linux.spec  pocketflow_creator_windows.spec  pyproject.toml
.github/workflows/: build.yml  docs.yml  release-notes.yml  release.yml  security.yml  tests.yml
docs/: 00_project_overview.md  01_requirements.md  02_gui_wireframes.md  03_architecture.md  04_node_type_model.md  05_project_format.md  06_codegen_design.md  07_testing_strategy.md  08_security_model.md  09_implementation_plan.md  10_user_guide.md  11_developer_guide.md  12_ai_agent_instructions.md  13_provider_setup.md  14_ci_cd_workflows.md  TUTORIALS.md  TUTORIAL_INDEX.md  testing.md
docs/tutorials/: EXERCISE_A.md  EXERCISE_B.md  EXERCISE_C.md  EXERCISE_D.md  TUTORIAL_01.md  TUTORIAL_02.md  TUTORIAL_03.md  TUTORIAL_04.md  TUTORIAL_05.md  TUTORIAL_06.md  TUTORIAL_07.md  TUTORIAL_08.md  TUTORIAL_09.md  TUTORIAL_10.md  TUTORIAL_11.md  TUTORIAL_12.md  TUTORIAL_13.md  TUTORIAL_14.md  TUTORIAL_15.md  TUTORIAL_16.md  TUTORIAL_17.md  TUTORIAL_18.md  TUTORIAL_19.md  TUTORIAL_20.md  TUTORIAL_21.md  TUTORIAL_22.md  TUTORIAL_23.md  TUTORIAL_24.md  TUTORIAL_25.md
examples/document_summarizer/: DocumentSummarizer.pfcproj.yaml
examples/document_summarizer/code/: main.py
examples/document_summarizer/graphs/: main.pfcgraph.yaml
examples/document_summarizer/node_types/: verified_json_llm.yaml
examples/document_summarizer/prompts/: revise.md  summarize.md
examples/document_summarizer/schemas/: shared_store.schema.yaml
scripts/: capture_screenshots.py  compile_translations.sh  format.sh  lint.sh  package.sh  run_app.bat  run_app.ps1  run_app.sh  setup-prj.bat  setup-prj.ps1  setup-prj.sh  test.bat  test.ps1  test.sh  update_translations.sh
src/pocketflow_creator/: __init__.py  __main__.py  builtin_node_types.py  graph_io.py  node_package_loader.py  node_snippets.yaml  project_io.py
src/pocketflow_creator/addon_nodes/: __init__.py  cart3d_analysis_node.py  earthquake_catalog_node.py  energy_plus_run_node.py  epanet_run_node.py  flo_py_model_node.py  fun3d_run_node.py  gmat_script_node.py  kite_fast_node.py  landsat_search_download_node.py  matlab_engine_node.py  modflow6_run_node.py  nasa_cea_node.py  national_map_download_node.py  noaa_weather_node.py  nwis_query_node.py  octave_script_node.py  open_fast_node.py  open_mdao_model_node.py  open_vsp_geometry_node.py  optimization_node.py  py_watershed_node.py  rocket_py_flight_node.py  shake_map_fetch_node.py  shake_map_scenario_node.py  stream_stats_basin_node.py  su2_cfd_node.py  swmm_run_node.py  trick_simulation_node.py  usgs_3dep_elevation_node.py  usgs_data_catalog_search_node.py  usgs_elevation_point_node.py  usgs_water_data_node.py  vspaero_analysis_node.py  wrf_model_node.py
src/pocketflow_creator/app/: canvas.py  code_manager.py  commands.py  editors.py  help_browser.py  human_input_dialog.py  main.py  node_type_wizard.py  provider_health.py  run_controller.py  settings_keys.py
src/pocketflow_creator/app/canvas/: __init__.py  icons.py  items.py  palette.py  scene.py  view.py
src/pocketflow_creator/app/dialogs/: __init__.py  auto_arrange_dialog.py  customize_toolbar_dialog.py  provider_manager_dialog.py  shared_store_designer_dialog.py
src/pocketflow_creator/bundled_nodes/: __init__.py  earthquake_catalog_node.py  fun3d_run_node.py  gmat_script_node.py  matlab_engine_node.py  modflow6_run_node.py  nasa_cea_node.py  open_mdao_model_node.py  py_watershed_node.py  rocket_py_flight_node.py  shake_map_fetch_node.py  shake_map_scenario_node.py  trick_simulation_node.py  usgs_elevation_point_node.py  vspaero_analysis_node.py
src/pocketflow_creator/generation/: __init__.py  dataflow_report.py  exporter.py  python_generator.py  report.py  standalone_generator.py
src/pocketflow_creator/help/: about_pocketflow.md  about_pocketflow_creator.md  example_node_package.py  getting_started.md  index.md  node_types_reference.md  quick_ref.md  your_first_flow.md
src/pocketflow_creator/help/context/: canvas.md  code_editor.md  explorer.md  inspector.md  node_type_wizard.md  options.md  palette.md  provider_failover_help.md  provider_manager.md  run_log.md  shared_store.md  tool_registry.md  validation.md
src/pocketflow_creator/help/tutorials/: custom_nodes.md  gtkn_index.md  gtkn_part1.md  gtkn_part10.md  gtkn_part11.md  gtkn_part12.md  gtkn_part13.md  gtkn_part14.md  gtkn_part15.md  gtkn_part16.md  gtkn_part17.md  gtkn_part18.md  gtkn_part19.md  gtkn_part2.md  gtkn_part20.md  gtkn_part21.md  gtkn_part22.md  gtkn_part23.md  gtkn_part24.md  gtkn_part25.md  (+15 more)
src/pocketflow_creator/model/: __init__.py  graph_model.py  node_type.py  project.py  provider_profile.py
src/pocketflow_creator/runtime/: __init__.py  providers.py  runner.py
src/pocketflow_creator/templates/: custom_stub.py.j2  flow.py.j2  main.py.j2  nodes.py.j2  test_flow.py.j2
src/pocketflow_creator/translations/: pocketflow_creator_de.qm  pocketflow_creator_de.ts  pocketflow_creator_en.qm  pocketflow_creator_en.ts  pocketflow_creator_es.qm  pocketflow_creator_es.ts  pocketflow_creator_fr.qm  pocketflow_creator_fr.ts  pocketflow_creator_ja.qm  pocketflow_creator_ja.ts  pocketflow_creator_zh.qm  pocketflow_creator_zh.ts
src/pocketflow_creator/validation/: __init__.py  graph_validator.py
tests/: conftest.py  test_canvas.py  test_code_manager.py  test_editors.py  test_exporter.py  test_generation_completeness.py  test_graph_validator.py  test_help_browser.py  test_node_package_loader.py  test_node_type.py  test_node_type_wizard.py  test_ollama_provider.py  test_project_archive_files.py  test_project_io.py  test_provider_health.py  test_provider_profiles.py  test_python_generator.py  test_remote_providers.py  test_report.py  test_runner.py  test_shared_store_designer.py  test_subflow.py
tests/gui/: test_canvas.py  test_editors.py
(+6 files in other folders)
