[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pocketflow-creator"
version = "0.1.0"
description = "RAD-style visual designer scaffold for PocketFlow LLM workflows"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "PocketFlow Creator contributors"}]
dependencies = [
    "PySide6>=6.6",
    "PyYAML>=6.0",
    "jsonschema>=4.20",
    "markdown>=3.5",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.8",
]

[project.scripts]
pocketflow-creator = "pocketflow_creator.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pocketflow_creator = ["templates/*.j2", "translations/*.ts", "translations/*.qm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
