[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pocketflow-creator"
version = "0.2.0"
description = "RAD-style visual designer scaffold for PocketFlow LLM workflows"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "PocketFlow Creator contributors"}]
keywords = ["pocketflow", "llm", "workflow", "designer", "visual", "rad"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Office/Business",
]
dependencies = [
    "PySide6>=6.6",
    "PyYAML>=6.0",
    "jsonschema>=4.20",
    "markdown>=3.5",
    "jinja2>=3.1",
]

[project.urls]
Homepage = "https://github.com/Monotoba/PocketFlowCreator"
Documentation = "https://github.com/Monotoba/PocketFlowCreator#readme"
Repository = "https://github.com/Monotoba/PocketFlowCreator.git"
Issues = "https://github.com/Monotoba/PocketFlowCreator/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.8",
]

[project.scripts]
pocketflow-creator = "pocketflow_creator.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pocketflow_creator = [
    "templates/*.j2",
    "translations/*.ts",
    "translations/*.qm",
    "help/*.md",
    "help/img/*",
    "help/tutorials/*.md",
    "help/context/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 150
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"src/pocketflow_creator/addon_nodes/*.py" = ["E501"]
"src/pocketflow_creator/builtin_node_types.py" = ["E501"]
"tests/*.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = "call-overload,assignment,attr-defined,union-attr"
